# Sensor

./: .gitignore  README.md  database.py  dht11.py  pyproject.toml
